<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fri_client_sdk</name>
  <version>1.11.0</version>
  <description>The fast robot interface client from Kuka refactored into a colcon package. The version number will track kukas FRI version number.</description>
  
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>KUKA</license>

  <url type="repository">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver</url>
  <url type="bugtracker">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver/issues</url>
  <url type="website">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver/wiki</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
