<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iiwa_fri_ros</name>
  <version>0.0.1</version>
  <description>The iiwa_fri_ros package</description>
  
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>GPLv3</license>

  <url type="repository">http://github.com/surgical-vision/iiwa_fri_stack</url>
  <url type="bugtracker">http://github.com/surgical-vision/iiwa_fri_stack/issues</url>
  <url type="website">http://github.com/surgical-vision/iiwa_fri_stack/wiki</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager</depend>
  <depend>fri_client_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
