<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iiwa_fri_ros</name>
  <version>0.0.1</version>
  <description>The iiwa_fri_ros package</description>
  
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver</url>
  <url type="bugtracker">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver/issues</url>
  <url type="website">https://github.com/grdwyer/Kuka_iiwa_ROS2_Driver/wiki</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager</depend>
  <depend>fri_client_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>
